Исправлено редактирование юзера

--- a/src/main/webapp/WEB-INF/pages/users.html
+++ b/src/main/webapp/WEB-INF/pages/users.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org" xmlns:c="http://java.sun.com/xml/ns/javaee">
-<!--      xmlns="http://www.w3.org/1999/xhtml" xmlns:c="http://www.w3.org/1999/XSL/Transform"-->
-<!--      xmlns:form="http://www.w3.org/1999/xhtml" xmlns:spring="">-->
+      xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>PHONE BOOK</title>
@@ -75,64 +74,3 @@
 </div>
 </body>
 </html>
-
-<!--<h2>Add a User</h2>-->
-
-<!--&lt;!&ndash;<a href="/users/add">&ndash;&gt;-->
-<!--<form th:action="@{/users/add}" th:object="${user}" method="post">-->
-<!--    &lt;!&ndash;    <table>&ndash;&gt;-->
-<!--    <tr>-->
-<!--        <td>Name:</td>-->
-<!--        <td><input type="text" th:field="*{name}"/></td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <td>lastName:</td>-->
-<!--        <td><input field="lastName"/></td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <td>phoneNumber:</td>-->
-<!--        <td><input field="phoneNumber"/></td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <td>Email:</td>-->
-<!--        <td><input field="email"/></td>-->
-<!--    </tr>-->
-    <!--    <label th:for="name">Name</label>-->
-    <!--    <input type="text" th:field="*{name}"/>-->
-    <!--    <label th:form="lastName">lastName</label>-->
-    <!--    <label for="lastName"></label><input type="text" th:field="*{lastName}" id="lastName" placeholder="LastName"/>-->
-    <!--    <label th:form="phoneNumber">phoneNumber</label>-->
-    <!--    <label for="phoneNumber"></label><input type="text" th:field="*{phoneNumber}" id="phoneNumber"-->
-    <!--                                            placeholder="PhoneNumber"/>-->
-    <!--    <label th:form="email">Email</label>-->
-    <!--    <label for="email"></label><input type="text" th:field="*{email}" id="email" placeholder="Email"/>-->
-    <!--    <input type="submit" value="Add"/>-->
-    <!--    </table>-->
-    <!--    <p><strong>What you name?</strong></p>-->
-    <!--    <p><input maxlength="25" size="40" value="Max"></p>-->
-    <!--</form>-->
-    <!--<form th:action="@{/add/{id}(id=${user.id})}" th:object="${user}" method="post">-->
-    <!--    <br/> Name:-->
-    <!--    <input type="text" th:field="*{name}"/>-->
-    <!--    <br/> Age:-->
-    <!--    <input type="text" th:field="*{lastName}"/>-->
-    <!--    <br/> Email:-->
-    <!--    <input type="text" th:field="*{phoneNumber}"/>-->
-    <!--    <br/>-->
-    <!--    <input type="submit" value="Update User"/>-->
-    <!--        <table border="0" cellpadding="5">-->
-    <!--            <tr>-->
-    <!--                <td>Name: </td>-->
-    <!--                <td><form:input path="name" /></td>-->
-    <!--            </tr>-->
-    <!--            <tr>-->
-    <!--                <td>Email: </td>-->
-    <!--                <td><form:input path="email" /></td>-->
-    <!--            </tr>-->
-<!--    <tr>-->
-<!--        <td colspan="2"><input type="submit" value="add"></td>-->
-<!--    </tr>-->
-    <!--        </table>-->
-    <!--    </form:from>-->
-<!--</form>-->
-<!--</a>-->
