--- a/src/main/webapp/WEB-INF/pages/edit.html
+++ b/src/main/webapp/WEB-INF/pages/edit.html
@@ -11,23 +11,23 @@
         <table border="0" cellpadding="5">
             <tr>
                 <td>ID:</td>
-                <td><input type="number" th:value="${user.id}" readonly></td>
+                <td><input type="number" th:field="*{user.id}" readonly/></td>
             </tr>
             <tr>
                 <td>Name:</td>
-                <td><input type="text" th:value="${user.name}"/></td>
+                <td><input type="text" th:field="*{user.name}"/></td>
             </tr>
             <tr>
                 <td>Last Name:</td>
-                <td><input type="text" th:value="${user.lastName}"/></td>
+                <td><input type="text" th:field="*{user.lastName}"/></td>
             </tr>
             <tr>
                 <td>Phone Number:</td>
-                <td><input type="text" th:value="${user.phoneNumber}"/></td>
+                <td><input type="text" th:field="*{user.phoneNumber}"/></td>
             </tr>
             <tr>
                 <td>Email:</td>
-                <td><input type="text" th:value="${user.email}"/></td>
+                <td><input type="text" th:field="*{user.email}"/></td>
             </tr>
             <tr>
                 <td colspan="2"><input type="submit" value="Edit"></td>
