--- a/src/main/webapp/WEB-INF/pages/new.html
+++ b/src/main/webapp/WEB-INF/pages/new.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create New User</title>
 </head>
 <body>
 <div align="center">
